# Cmake

./: .gitignore  April15th2021.txt  CMakeLists.txt  DailyLog.txt  Feb2th.txt  NewFileToBeAddedViaSmartGit.txt  README.md  build.sh  clean_command.sh  main.cpp  run.sh
calculator/: CMakeLists.txt  calculator.cpp
